--- a/BACK/package.json
+++ b/BACK/package.json
@@ -5,8 +5,9 @@
     "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc && next build"
-  },
+    "build": "tsc && next build",
+    "type-check": "tsc -p tsconfig.json --noEmit"
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC",
