--- a/BACK/package.json
+++ b/BACK/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 \"src/public/**/*\" dist/public",
     "type-check": "npx tsc -p tsconfig.json --noEmit"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.7",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
