--- a/BACK/vercel.json
+++ b/BACK/vercel.json
@@ -1,11 +1,10 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "destination": "/dist/server.js"
     }
-  ],
-  "installCommand": "npm install"
+  ]
 }
