--- a/BACK/tsconfig.json
+++ b/BACK/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "outDir": "./dist",
+    "outDir": "./public",
     "rootDir": "./src",
     "resolveJsonModule": true,
     "skipLibCheck": true,
