--- a/BACK/vercel.json
+++ b/BACK/vercel.json
@@ -4,7 +4,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/dist/server.js"
+      "destination": "/public/server.js"
     }
   ]
 }
